--- a/learn/src/main/res/layout/fragment_home.xml
+++ b/learn/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,26 @@
         android:textColor="@color/black"
         android:textSize="26sp"/>
 
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome,"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="150dp"
+        android:textColor="@color/black"
+        android:textSize="26sp" />
+
+    <TextView
+        android:id="@+id/emailDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="190dp"
+        android:textColor="@color/black"
+        android:textSize="26sp" />
+
     <ImageButton
         android:id="@+id/class_1"
         android:layout_width="wrap_content"
