--- a/learn/src/main/res/navigation/nav_graph.xml
+++ b/learn/src/main/res/navigation/nav_graph.xml
@@ -15,28 +15,6 @@
             app:destination="@id/fragment_home" />
     </fragment>
     <fragment
-        android:id="@+id/fragment_three"
-        android:name="com.example.learn.Fragment_three"
-        android:label="fragment_three"
-        tools:layout="@layout/fragment_three" >
-        <action
-            android:id="@+id/action_fragment_three_to_fragment_one"
-            app:destination="@id/fragment_signup" />
-    </fragment>
-    <fragment
-        android:id="@+id/fragment_two"
-        android:name="com.example.learn.Fragment_two"
-        android:label="fragment_two"
-        tools:layout="@layout/fragment_two" >
-        <action
-            android:id="@+id/action_fragment_two_to_fragment_three"
-            app:destination="@id/fragment_three"
-            app:popUpTo="@id/fragment_signup" />
-        <argument
-            android:name="user"
-            app:argType="com.example.learn.User" />
-    </fragment>
-    <fragment
         android:id="@+id/fragment_login"
         android:name="com.example.learn.Fragment_login"
         android:label="fragment_login"
@@ -55,7 +33,11 @@
         android:id="@+id/fragment_home"
         android:name="com.example.learn.Fragment_home"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <argument
+            android:name="user"
+            app:argType="com.example.learn.User" />
+    </fragment>
     <fragment
         android:id="@+id/fragment_discussion"
         android:name="com.example.learn.Fragment_discussion"
