--- a/learn/src/main/res/layout/fragment_profile.xml
+++ b/learn/src/main/res/layout/fragment_profile.xml
@@ -4,143 +4,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background= "@color/purple_500"
+    android:background= "@color/white"
     tools:context=".Fragment_profile">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <ImageView
+        android:layout_width="420dp"
+        android:layout_height="150dp"
+        android:src="@drawable/rectangle" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="90dp"
         android:layout_marginHorizontal="26sp"
-        android:text="My Classes"
+        android:text="Profile Settings"
         android:textColor="@color/black"
         android:textSize="26sp"/>
 
-    <ImageButton
-        android:id="@+id/class_1"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#F44336"
-        android:src="@drawable/ic_outline_school_24"/>
-
-    <ImageButton
-        android:id="@+id/class_2"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#FFC107"
-        android:src="@drawable/ic_outline_school_24"/>
-
-
-    <ImageButton
-        android:id="@+id/class_3"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#8BC34A"
-        android:src="@drawable/ic_outline_school_24"/>
-
-    <ImageButton
-        android:id="@+id/class_4"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#009688"
-        android:src="@drawable/ic_outline_school_24"/>
-
-
-    <ImageButton
-        android:id="@+id/class_5"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#2196F3"
-        android:src="@drawable/ic_outline_school_24" />
-
-
-    <ImageButton
-        android:id="@+id/class_6"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#673AB7"
-        android:src="@drawable/ic_outline_school_24" />
-
-
-
-    <TextView
-        android:id="@+id/text_classes"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/class_4" />
-
-
-    <TextView
-        android:id="@+id/tip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="30dp"
-        android:text="A useful tip for the app will go here"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
-
     <ImageView
-        android:id="@+id/lightbulb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/account_icon_caroline"
+        android:layout_width="100dp"
+        android:layout_height="75dp"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginBottom="180dp"
         app:tint="@android:color/black"
         android:backgroundTint="#F44336"
-        android:src="@drawable/ic_outline_lightbulb_24"/>
-
-    <ImageButton
-        android:id="@+id/add_classes_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="140dp"
-        android:layout_marginRight="100dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="@android:color/holo_green_light"
-        android:src="@drawable/ic_baseline_dashboard_customize_24" />
+        android:src="@drawable/ic_baseline_account_circle_24"/>
 
     <TextView
-        android:id="@+id/add_classes_text"
+        android:id="@+id/caroline"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="120dp"
+        android:text="Caroline DeMasi"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="15sp" />
+
+    <EditText
+        android:id="@+id/updateUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="270dp"
+        android:layout_marginHorizontal="26sp"
+        android:backgroundTint="#000000"
+        android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
+        android:hint="Update Username (1x per month)" />
+
+
+    <EditText
+        android:id="@+id/updatePassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="320dp"
+        android:layout_marginHorizontal="26sp"
+        android:backgroundTint="#000000"
+        android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
+        android:hint="Update Password" />
+
+    <EditText
+        android:id="@+id/updatePhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="370dp"
+        android:layout_marginHorizontal="26sp"
+        android:backgroundTint="#000000"
+        android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
+        android:hint="Add or Update Phone Number" />
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="140dp"
-        android:layout_marginLeft="0dp"
-        android:text="Add more classes"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        android:layout_marginTop="415dp"
+        android:id="@+id/updatePWButton"
+        android:text="Update"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="150dp"/>
 
 </FrameLayout>
